MDEV-35661 Assertion `!cache_list ||...' fails in online_alter_close_connection

After MDEV-35182 (88adcbf3) fix, online_alter still wasn't fully ready for
`XA PREPARE` to be skipped.

In fact, according to XA standard, even xa_commit() call may happen without
preceding xa_prepare(), so this stage is completely optional.

This commit removes any relying on xa_prepare() call. The only thing that will
be done there is an equivalent of "statement-level commit", which basically just
flushes a pending rows event to an online alter cache.

This is done by always storing an online alter cache in the XA_data object
whenever XA is active, rather than in THD::ha_data.